<resources>
    <string name="app_name">Fighty Boat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unlock">Unlock</string>
    <string name="finish">Finish</string>
    <string name="new_game">New Game</string>
    <string name="transition_avatar">transition_avatar</string>
    <string name="transition_name">transition_name</string>
    <string name="change_lock">Change Lock</string>
    <string name="change_ship_positions">Change Ship Positions</string>
    <string name="player_icon">Player Icon</string>
    <string name="player_name">Player Name</string>
    <string name="player_avatar">Player Avatar</string>
    <string name="player_ready">Player Ready</string>
    <string name="player_detail_title">Player Details</string>
</resources>
